# zcash-vanity

./: Cargo.toml  LICENSE  README.md
src/: address.rs  device.rs  main.rs  pattern.rs  sha256.rs  util.rs
