[package]
name = "zcash-vanity"
version = "0.2.6"
authors = ["Jason Davies <jason@jasondavies.com>"]
description = "Zcash vanity address generator."
homepage = "https://zcash.plutomonkey.com/vanity/"
repository = "https://github.com/plutomonkey/zcash-vanity"
readme = "README.md"
license = "MIT"
keywords = ["vanity", "zcash"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
bs58 = "~0.2.0"
byteorder = "~1.1.0"
clap = "~2.25.0"
clippy = { version = "0.0.144", optional = true }
curve25519-dalek = "~0.9.2"
ocl-core = "~0.5.0"
ring = "0.13.0-alpha"
rust-crypto = "~0.2.36"
