[package]
name = "zcash-vanity"
version = "0.2.9"
authors = ["Jason Davies <jason@jasondavies.com>"]
description = "Zcash vanity address generator."
homepage = "https://zcash.plutomonkey.com/vanity/"
repository = "https://github.com/plutomonkey/zcash-vanity"
readme = "README.md"
license = "MIT"
keywords = ["vanity", "zcash"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
bs58 = "0.2"
byteorder = "^1.1"
clap = "2"
curve25519-dalek = "3"
ocl-core = "^0.7"
getrandom = "0.2"
rust-crypto = "^0.2"
